[package]
name = "proxymix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
curl = "0"
bytes = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
toml = "0"